--- a/assets/css/quiz.css
+++ b/assets/css/quiz.css
@@ -2920,7 +2920,12 @@
 .quiz__lead-form {
     -webkit-transform: translateX(100%);
     transform: translateX(100%);
-    transition: all 0.17s cubic-bezier(0.61, 0.3, 0.8, 0.97);
+    transition: all 0.3s cubic-bezier(0.61, 0.3, 0.8, 0.97);
+}
+
+.quiz__lead-form_enter {
+    -webkit-transform: translateX(0%);
+    transform: translateX(0%);
 }
 
 @media (max-width:767px) {
