correct form html; don'tlet send form without checking the policy

--- a/assets/css/chunk-vendors.css
+++ b/assets/css/chunk-vendors.css
@@ -1860,7 +1860,8 @@ screen and (min-width:769px) {
 
 .b-checkbox.checkbox input[type=checkbox]:checked+.check {
     background: #7957d5 url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1 1'%3E%3Cpath d='M.04.627L.146.52.43.804.323.91zm.177.177L.854.167.96.273.323.91z' fill='%23fff'/%3E%3C/svg%3E") no-repeat 50%;
-    border-color: #7957d5
+    border-color: #7957d5;
+    background-position: 2px;
 }
 
 .b-checkbox.checkbox input[type=checkbox]:checked+.check.is-white {
