--- a/assets/css/swiper.css
+++ b/assets/css/swiper.css
@@ -826,213 +826,6 @@
     }
 }
 
-@-webkit-keyframes swipe-hint__svg_translate-x {
-    0% {
-        -webkit-transform: translateX(0);
-        transform: translateX(0)
-    }
-    25% {
-        -webkit-transform: translateX(-60%);
-        transform: translateX(-60%)
-    }
-    50% {
-        -webkit-transform: translateX(60%);
-        transform: translateX(60%)
-    }
-    75% {
-        -webkit-transform: translateX(-60%);
-        transform: translateX(-60%)
-    }
-    to {
-        -webkit-transform: translateX(60%);
-        transform: translateX(60%)
-    }
-}
-
-@keyframes swipe-hint__svg_translate-x {
-    0% {
-        -webkit-transform: translateX(0);
-        transform: translateX(0)
-    }
-    25% {
-        -webkit-transform: translateX(-60%);
-        transform: translateX(-60%)
-    }
-    50% {
-        -webkit-transform: translateX(60%);
-        transform: translateX(60%)
-    }
-    75% {
-        -webkit-transform: translateX(-60%);
-        transform: translateX(-60%)
-    }
-    to {
-        -webkit-transform: translateX(60%);
-        transform: translateX(60%)
-    }
-}
-
-@media (max-width: 818px) {
-    @-webkit-keyframes swipe-hint__svg_translate-x {
-        0% {
-            -webkit-transform: translateX(0);
-            transform: translateX(0)
-        }
-        25% {
-            -webkit-transform: translateX(-60%);
-            transform: translateX(-60%)
-        }
-        50% {
-            -webkit-transform: translateX(0);
-            transform: translateX(0)
-        }
-        75% {
-            -webkit-transform: translateX(-60%);
-            transform: translateX(-60%)
-        }
-        to {
-            -webkit-transform: translateX(0);
-            transform: translateX(0)
-        }
-    }
-    @keyframes swipe-hint__svg_translate-x {
-        0% {
-            -webkit-transform: translateX(0);
-            transform: translateX(0)
-        }
-        25% {
-            -webkit-transform: translateX(-60%);
-            transform: translateX(-60%)
-        }
-        50% {
-            -webkit-transform: translateX(0);
-            transform: translateX(0)
-        }
-        75% {
-            -webkit-transform: translateX(-60%);
-            transform: translateX(-60%)
-        }
-        to {
-            -webkit-transform: translateX(0);
-            transform: translateX(0)
-        }
-    }
-}
-
-@-webkit-keyframes swipe-hint__svg_translate-x-mobile {
-    0% {
-        -webkit-transform: translateX(0);
-        transform: translateX(0)
-    }
-    25% {
-        -webkit-transform: translateX(-100%);
-        transform: translateX(-100%)
-    }
-    50% {
-        -webkit-transform: translateX(0);
-        transform: translateX(0)
-    }
-    75% {
-        -webkit-transform: translateX(-100%);
-        transform: translateX(-100%)
-    }
-    to {
-        -webkit-transform: translateX(0);
-        transform: translateX(0)
-    }
-}
-
-@keyframes swipe-hint__svg_translate-x-mobile {
-    0% {
-        -webkit-transform: translateX(0);
-        transform: translateX(0)
-    }
-    25% {
-        -webkit-transform: translateX(-100%);
-        transform: translateX(-100%)
-    }
-    50% {
-        -webkit-transform: translateX(0);
-        transform: translateX(0)
-    }
-    75% {
-        -webkit-transform: translateX(-100%);
-        transform: translateX(-100%)
-    }
-    to {
-        -webkit-transform: translateX(0);
-        transform: translateX(0)
-    }
-}
-
-@-webkit-keyframes swipe-hint_hidden {
-    0% {
-        z-index: 1000;
-        visibility: visible;
-        opacity: 0
-    }
-    10% {
-        opacity: .8
-    }
-    90% {
-        opacity: .8
-    }
-    to {
-        opacity: 0
-    }
-}
-
-@keyframes swipe-hint_hidden {
-    0% {
-        z-index: 1000;
-        visibility: visible;
-        opacity: 0
-    }
-    10% {
-        opacity: .8
-    }
-    90% {
-        opacity: .8
-    }
-    to {
-        opacity: 0
-    }
-}
-
-:root {
-    --light-grey-blue: #b1b5be;
-    --gray: #e2e2e2;
-    --dark-grey-blue: #2e2e54;
-    --light-blue-grey: #d2d4d8;
-    --white-two: #f7f7f7;
-    --grey-blue: #69748c;
-    --black: #000
-}
-
-@-webkit-keyframes fade-hide-button {
-    0% {
-        opacity: 0
-    }
-    30% {
-        opacity: 0
-    }
-    to {
-        opacity: .53
-    }
-}
-
-@keyframes fade-hide-button {
-    0% {
-        opacity: 0
-    }
-    30% {
-        opacity: 0
-    }
-    to {
-        opacity: .53
-    }
-}
-
 .answer-images {
     overflow-x: hidden;
     overflow-y: hidden;
@@ -1307,4 +1100,13 @@
     .quiz-container_rtl .quiz_sidebar_on .answer-images__group_layout-scroll .answer-images__answer-container {
         margin: 0 0 20px 20px
     }
+}
+
+.third-step:last-child .answer-image__img {
+    object-fit: contain;
+    -o-object-fit: contain;
+}
+
+.third-step:last-child .answer-image__img-container {
+    background-color: white;
 }
